# drive_to_survive

./: .gitignore  README.md  index.html
dqn_models_audibot/: dqn_checkpoint.pth  dqn_final_policy.pth
install/: local_setup.sh  setup.sh  setup.zsh
launch/: drive_to_survive.launch.py
log/: latest_build
resources/gazebo_tf/launch/: a3_project3.launch.py  drive_to_survive.launch.py
resources/gazebo_tf/rviz/: audi.rviz
resources/rl_information/: episode_rewards.csv
src/: audibot  audibot_description  audibot_gazebo  gazebo_tf
src/audibot_rl_driver/: README.md  package.xml  setup.cfg  setup.py
src/audibot_rl_driver/audibot_rl_driver/: rl_agent_node.py
src/audibot_teleop_keys/: README.md  setup.cfg  setup.py
src/audibot_teleop_keys/audibot_teleop_keys/: teleop_keys.py
src/audibot_yolo/: README.md  package.xml  setup.cfg  setup.py
src/audibot_yolo/audibot_yolo/: back_camera_node.py  front_camera_node.py  left_camera_node.py  right_camera_node.py  yolo_publisher.py
src/audibot_yolo/launch/: multi_camera.launch.py
src/cluster_puck/: README.md  setup.cfg  setup.py
src/cluster_puck/cluster_puck/: cone_map.py  laser_to_global.py  lidar_processing.py  svm_cone_classifier.py  train_svm.py  transform_data.py
src/cluster_puck/install/: setup.bash  (+3 more)
src/rl_gym/: README.md  package.xml  setup.cfg  setup.py
src/rl_rewards/: README.md  package.xml  setup.cfg  setup.py
src/yolo_msg/: CMakeLists.txt
validation/ground_truths/: cone_centers.json
validation/testing/: test_lidar_cone_detection.py
yolo_training/: README.md  save_images.py  train_yolo.py
(+289 files in other folders)
