<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>audibot_yolo</name>
  <version>0.0.0</version>
  <description>Yolo package which takes images and draws bounding boxes around traffic cones and fire engines in the Drive to Survive Gazebo environment</description>
  <maintainer email="Timothy.J.Ollerton@student.uts.edu.au">Tim</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <!-- <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf_transformations</depend> -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
